[package]
name = "gbar"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gtk4"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk4-rs/"
package = "gdk4"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs/"
package = "glib"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs/"

